--- a/index.html
+++ b/index.html
@@ -45,52 +45,22 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Medi<span>Nest</span></h1>
+        <h1 class="sitename"><img src="./assets/img/logo.png" alt=""></span></h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="departments.html">Departments</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="doctors.html">Doctors</a></li>
-          <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="department-details.html">Department Details</a></li>
-              <li><a href="service-details.html">Service Details</a></li>
-              <li><a href="appointment.html">Appointment</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li><a href="faq.html">Frequently Asked Questions</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="terms.html">Terms</a></li>
-              <li><a href="privacy.html">Privacy</a></li>
-              <li><a href="404.html">404</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html" class="active">Գլխավոր</a></li>
+          <li><a href="about.html">Մեր մասին</a></li>
+          <li><a href="departments.html">Ծառայություններ</a></li>
+          <li><a href="services.html">Գնացուցակ</a></li>
+          <li><a href="doctors.html">Բժիշկներ</a></li>
+           <li><a href="contact.html">Կապ մեզ հետ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="apointment.html">Apointment</a>
+      
 
     </div>
   </header>
@@ -108,8 +78,8 @@
                 <div class="card-content">
                   <i class="bi bi-telephone-fill"></i>
                   <div class="text">
-                    <span class="label">24/7 Emergency</span>
-                    <span class="number">+1 (555) 911-2468</span>
+                    <span class="label">Գ.Արևշատ Մուրացան 42</span>
+                    <span class="number">+374 (77) 40 40 37</span>
                   </div>
                 </div>
               </div>
@@ -128,9 +98,7 @@
 
           <div class="col-lg-7">
             <div class="hero-content" data-aos="fade-left" data-aos-delay="200">
-              <div class="badge-container">
-                <span class="hero-badge">Trusted Healthcare Provider</span>
-              </div>
+             
 
               <h1 class="hero-title">Excellence in Medical Care Since 1985</h1>
               <p class="hero-description">Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
