--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5">
             <div class="hero-image" data-aos="fade-right" data-aos-delay="100">
-              <img src="assets/img/health/staff-8.webp" alt="Healthcare Professional" class="img-fluid main-image">
+              <img src="./assets/img/kolektiv.jpg" alt="Healthcare Professional" class="img-fluid main-image">
               <div class="floating-card emergency-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="card-content">
                   <i class="bi bi-telephone-fill"></i>
